# supervisor-agent

./: .claudeignore  .gitignore  CLAUDE.md  README.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
supervisor-agent/: .env.example  .gitignore  README.md  ingest_latex.py  pyproject.toml  requirements.txt  test_agent.py
supervisor-agent/.github/instructions/: CLAUDE.instructions.md
supervisor-agent/.github/workflows/: tests.yml
supervisor-agent/docs/: CONTRIBUTING.md
supervisor-agent/src/supervisor_agent/: __init__.py  agent.py  artifacts.py  config.py  graph.py  main.py  models.py  nodes.py  rag.py  state.py
supervisor-agent/src/supervisor_agent/schemas/: __init__.py  paper.py  review.py
supervisor-agent/tests/: __init__.py  test_agent.py
